# DingDong

./: .gitignore  CMakeLists.txt  README.md
client/: AddFriendWindow.qml  ChatListItem.qml  CreateGroup.qml  FileWidget.qml  GroupInf.qml  HistoryMessageListItem.qml  HistoryMessageScreen.qml  LoginWindow.qml  MainWindow.qml  RegisterWindow.qml  client.pro  main.cpp  personalInf.qml  qfileutils.h  qqclient.cpp  qqclient.h  qsettingini.h  qtquickcontrols2.conf  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
client/components/: AddFriendWidget.qml  AutoScrollTextEdit.qml  EmojiChoose.qml  FriendList.qml  GroupAddWidget.qml  InfListItem.qml  RoundImage.qml  SearchWidget.qml  SelectAvatar.qml  VerticalTabWidget.qml
client/js/: file_utils.js  time_utils.js
config/: config.yaml
include/: database_Service_Layer.h
release/: DingDong
server/: QQServer.pro  main.cpp  onlinelist.h  qqserver.cpp  qqserver.h  qqserver.ui  sqlaccountmodel.cpp  sqlaccountmodel.h  sqlfriendmodel.cpp  sqlfriendmodel.h  sqlgroupmodel.cpp  sqlgroupmodel.h  tcpserver.h
src/: main.cpp
src/Global/: Global.cpp  Global.h  config.cpp  config.h
src/database_Map_To_Memory/Map_Logical/: Map_Database_Logical_To_Group_Relate.cpp  Map_Database_Logical_To_Group_Relate.h  Map_Database_Logical_To_Online_User.cpp  Map_Database_Logical_To_Online_User.h
src/database_Map_To_Memory/Map_Obj/: Map_Database_Group.cpp  Map_Database_Group.h  Map_Database_Group_User.cpp  Map_Database_Group_User.h  Map_Database_online_User.cpp  Map_Database_online_User.h
src/server/Chat_Server/: Chat_Server.cpp  Chat_Server.h
src/server/File_Server/: File_Server.cpp  File_Server.h
